# eNROLL-Android

./: .gitattributes  .gitignore  ANDROID_SDK_THEME_DOCUMENTATION.md  ARCHITECTURE.md  ICON_CUSTOMIZATION.md  NFC_IMPLEMENTATION_INVESTIGATION.md  PROJECT_RULES.md  README.md  RELEASE_PROCESS.md  UQUDO_REPLACEMENT_REVIEW.md  bitbucket-pipelines.yml  build.gradle  codemagic.yaml  eNROLL-sdk-1.5.21.aar  gradle.properties  jitpack.yml  key.properties  passport_upload_body.json  passport_upload_curl.txt  pom-1.5.11.xml  pom-1.5.12.xml  pom-1.5.13.xml  pom-1.5.14.xml  pom-1.5.15.xml  pom-1.5.16.xml  pom-1.5.17.xml  pom-1.5.18.xml  pom-1.5.19.xml  pom-1.5.20.xml  pom-1.5.21.xml  pom-1.5.22.xml  pom-1.5.23.xml  pom-1.5.24.xml  pom.xml  settings.gradle
.windsurf/rules/: project-rules.md
app/: build.gradle  google-services.json
app/appdistribution/: releasenotes.txt  tester.txt
app/release/: output-metadata.json
app/src/main/: .gitignore  AndroidManifest.xml
app/src/main/assets/: env  env_andrew  env_lumin_production  (+1 more)
docs/: SDK_RELEASE_GUIDE.md  USER_STORY_ORANGE_DEPENDENCY_FIX.md  azure_devops_import.csv
eNROLL-sdk/: build.gradle  consumer-rules.pro
eNROLL-sdk/src/main/: AndroidManifest.xml
eNROLL-sdk/src/main/cpp/: CMakeLists.txt  encryption_key.cpp
ekyc-android-sdk/: build.gradle
ekyc-android-sdk/libs/core/: build.gradle
ekyc-android-sdk/libs/main/: build.gradle
ekyc-android-sdk/libs/ui-components/: build.gradle
ekyc-android-sdk/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
scripts/: cleanup-github.sh  release.sh
(+1368 files in other folders)
